# NeuralClaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.yaml  conftest.py  docker-compose.yml  exceptions.py  main.py  neuralclaw_cli.py  pyproject.toml  requirements.txt  run.sh
agent/: __init__.py  context_builder.py  executor.py  heartbeat.py  orchestrator.py  planner.py  reasoner.py  reflector.py  response_synthesizer.py  session.py  utils.py  workspace.py
app/: __init__.py  hotword.py  main_window.py  overlay.py  signals.py  state.py  tray.py
brain/: __init__.py  anthropic_client.py  bytez_client.py  capabilities.py  gemini_client.py  llm_client.py  ollama_client.py  openai_client.py  openrouter_client.py  types.py
config/: config.yaml  settings.py
docker/sandbox/: Dockerfile
docs/: Architecture.md  CLI_Spec.md  ClawHub_Bridge_Spec.md  Gateway_WebUI.md  Mvp_Tech.md  PRD.md  System_Design.md  docker-publishing.md  neuralclaw_phase_e_retrospective.docx
gateway/: __init__.py  gateway_client.py  gateway_server.py  session_store.py  webui_server.py
interfaces/: cli.py  gateway_cli.py  model_selector.py  telegram.py  voice.py
kernel/: bootstrap.py  kernel.py  kernel__init__.py
mcp/: manager.py
memory/: __init__.py  embedder.py  episodic.py  long_term.py  memory_manager.py  short_term.py  task.py
observability/: compat.py  logger.py  trace.py
onboard/: __init__.py  clawhub_installer.py  skill_installer.py  wizard.py
safety/: __init__.py  risk_scorer.py  safety_kernel.py  whitelist.py
schedular/: schedular.py
scheduler/: __init__.py  schedular.py  scheduler.py
scripts/: install_cli.sh
skills/: __init__.py  base.py  bus.py  discovery.py  loader.py  md_loader.py  md_skill.py  registry.py  types.py
skills/builtin/: filesystem.py  terminal.py  web_fetch.py  web_search.py
skills/clawhub/: bridge_executor.py  bridge_loader.py  bridge_parser.py  clawhub_skill.py  dependency_checker.py  env_injector.py
skills/plugins/: automation_cron_create.py  automation_file_watcher.py  automation_report_render.py  automation_script_runner.py  automation_slack_notify.py  automation_webhook_sender.py  cyber_banner_grab.py  cyber_cve_lookup.py  cyber_dns_enum.py  cyber_http_probe.py  cyber_port_scan.py  cyber_ssl_cert_check.py  cyber_subdomain_enum.py  cyber_tech_fingerprint.py  cyber_vuln_report_gen.py  cyber_whois_lookup.py  data_chart_gen.py  data_csv_parse.py  data_diff_docs.py  data_json_transform.py  data_sql_query.py  data_summarize_doc.py  dev_code_search.py  dev_dependency_audit.py  dev_file_summarize.py  dev_git_blame.py  dev_git_diff.py  dev_git_log.py  dev_lint_runner.py  dev_pr_summary.py  dev_readme_gen.py  dev_test_runner.py  echo_skill.py  gitpr.md  meta_autonomous_research.py  meta_daily_assistant.py  meta_recon_pipeline.py  meta_repo_audit.py  meta_system_maintenance.py  personal_calendar_read.py  (+12 more)
src/neuralclaw/: __init__.py  __main__.py  exceptions.py  main.py
src/webui/: index.html
tests/e2e/: test_agent_e2e.py
tests/integration/: test_agent_integration.py
tests/unit/: test_agent_modules.py  test_brain.py  test_clawhub_bridge.py  test_clawhub_bridge_integration.py  test_cli.py  test_config.py  test_gateway_protocol.py  test_memory.py  test_memory_and_executor.py  test_orchestrator.py  test_phase6.py  test_phase_c_meta_skills.py  test_phase_d_scheduler.py  test_safety.py  (+5 more)
tools/: __init__.py  filesystem.py  search.py  terminal.py  tool_bus.py  tool_registry.py  types.py  web_fetch.py
webui/: app.js  style.css
(+134 files in other folders)
