[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-claw"
version = "1.0.0"
description = "Local-first autonomous AI agent platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Solo Developer" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
keywords = ["ai", "agent", "autonomous", "llm", "local-first"]

dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.3",
    "rich>=13.9.0",
    "httpx>=0.27.0,<0.28.0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    # LLM Providers
    "openai>=1.40.0",
    "anthropic>=0.30.0",
    "ollama>=0.3.0",
    "tiktoken>=0.7.0",
    "bytez>=3.0.1",
    # Memory / Vector DB
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "numpy>=1.26.0",
    # Observability
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
telegram = ["python-telegram-bot>=21.0"]
api = ["fastapi>=0.100.0", "uvicorn[standard]>=0.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "ruff>=0.3.0",
    "build>=1.0.0",
]
all = ["neural-claw[browser,telegram,api]"]

[project.scripts]
neuralclaw = "neuralclaw.main:main_sync"

[project.urls]
Homepage = "https://github.com/neuralclaw/neuralclaw"
Repository = "https://github.com/neuralclaw/neuralclaw"
Issues = "https://github.com/neuralclaw/neuralclaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
neuralclaw = [
    "config/*.yaml",
    "skills/plugins/*.md",
    "webui/*.html",
    "webui/*.css",
    "webui/*.js",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark a test as an asyncio coroutine",
]

[tool.coverage.run]
source = ["src/neuralclaw"]
omit = ["tests/*", ".venv/*", "scripts/*"]
